--- a/pages/index.html
+++ b/pages/index.html
@@ -1,54 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>後臺管理</title>
-  </head>
-  <body>
-    <%- include('./layout/header'); -%>
-    <h1 class="index-title">我是首頁</h1>
-    <div class="card" style="width: 18rem">
-      <div class="card-body">
-        <h5 class="card-title">卡片元件</h5>
-        <p class="card-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, odit, iusto odio assumenda alias id
-          nobis earum!
-        </p>
-      </div>
-    </div>
 
-    <!-- Modal 按鈕 -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-      打開 modal
-    </button>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>後臺管理</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+</head>
 
-    <!-- Modal 元件 -->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal 標題</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<body>
+  <div class="d-flex">
+    <%- include('./layout/nav'); -%>
+      <div class="content h-100">
+        <div class="content-top d-flex">
+          <div class="left d-flex align-items-center">
+            <h2 class="fw-bold mb-0">Assignment</h2>
+            <div class="dropdown">
+              <a class="btn shadow-none border-0 d-flex align-items-center p-0" href="#" role="button"
+                id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="select-course fw-bold">All Courses</span>
+                <span class="material-icons text-success">
+                  keyboard_arrow_down
+                </span>
+              </a>
+
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </div>
           </div>
-          <div class="modal-body">內容</div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">關閉</button>
-            <button type="button" class="btn btn-primary">確定</button>
+          <div class="right ms-auto d-flex align-items-center">
+            <a href="#" class="me-4">
+              <span class="material-icons">
+                search
+              </span>
+            </a>
+            <a href="#">
+              <span class="material-icons">
+                notifications
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="main">
+          <div class="d-flex justify-content-between mb-1">
+            <div class="dropdown">
+              <a class="btn shadow-none border-0 d-flex align-items-center p-0" href="#" role="button"
+                id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="select-course">All(4)</span>
+                <span class="material-icons text-success">
+                  keyboard_arrow_down
+                </span>
+              </a>
+
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </div>
+            <span class="commit-num">2 comments</span>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              <ul class="list-group list-unstyled" id="list-tab" role="tablist">
+                <li class="">
+                  <a class="list-group-item style list-group-item-action active" id="list-home-list"
+                    data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">
+                    <h4 class="d-flex mb-0 assessment-list justify-content-between mb-1">
+                      <span>Chapter Assignment 2</span>
+                      <span>4 hrs ago</span>
+                    </h4>
+                    <h3 class="d-flex align-items-center justify-content-between assessment-list-title mb-0">
+                      <span class="assessment-title fw-bold">Please check this file…</span>
+                      <span class="assessment-name">Emily Wang</span>
+                    </h3>
+                  </a>
+                </li>
+                <li>
+                  <a class="list-group-item style list-group-item-action" id="list-profile-list" data-bs-toggle="list"
+                    href="#list-profile" role="tab" aria-controls="list-profile">
+                    <h4 class="d-flex mb-0 assessment-list justify-content-between mb-1">
+                      <span>Chapter Assignment 1</span>
+                      <span>12 hrs ago</span>
+                    </h4>
+                    <h3 class="d-flex align-items-center justify-content-between assessment-list-title mb-0">
+                      <span class="assessment-title fw-bold">My Homework</span>
+                      <span class="assessment-name">David Xu</span>
+                    </h3>
+                  </a>
+                </li>
+                <li>
+                  <a class="list-group-item style list-group-item-action" id="list-messages-list" data-bs-toggle="list"
+                    href="#list-messages" role="tab" aria-controls="list-messages">
+                    <h4 class="d-flex mb-0 assessment-list justify-content-between mb-1">
+                      <span>Final Assignment</span>
+                      <span>18 hrs ago</span>
+                    </h4>
+                    <h3 class="d-flex align-items-center justify-content-between assessment-list-title mb-0">
+                      <span class="assessment-title fw-bold">Have a problem with this…</span>
+                      <span class="assessment-name">Tony Wei</span>
+                    </h3>
+                  </a>
+                </li>
+                <li>
+                  <a class="list-group-item style list-group-item-action border-bottom" id="list-settings-list"
+                    data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">
+                    <h4 class="d-flex mb-0 assessment-list justify-content-between mb-1">
+                      <span>Final Assignment</span>
+                      <span>19 hrs ago</span>
+                    </h4>
+                    <h3 class="d-flex align-items-center justify-content-between assessment-list-title mb-0">
+                      <span class="assessment-title fw-bold">Did I do it right?</span>
+                      <span class="assessment-name">Christina Lin</span>
+                    </h3>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-8 d-flex flex-column justify-content-between">
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active " id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+                  <!-- <div class="list-group d-flex mb-0 assessment-list justify-content-between">
+                    <a class="list-group-item style list-group-item-action d-flex justify-content-between align-items-center border-bottom-0" id="list-home-list"
+                      data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">
+ 
+                    </a>
+                  </div> -->
+                  <div class="card rounded-0">
+                    <h5 class="card-header style mb-0 assessment-list d-flex justify-content-between align-items-center">
+                      <div>
+                        <h4 class="assessment-list mb-1">Chapter Assignment 2 / HTML&CSS</h4>
+                        <h3 class="assessment-title fw-bold mb-0">Please check this file for me, thanks!</h3>
+                      </div>
+                      <span class="material-icons">more_vert</span>
+                    </h5>
+                    <div class="card-body">
+                      <ul class="list-unstyled">
+                        <li class="content-info">
+                          <div class=" d-flex flex-shrink-0">
+                            <img class="rounded-circle me-2" src="../assets/images/emilywang.jpeg" alt="student-photo">
+                            <div>
+                              <h4 class="student-name fw-bold mb-1">Emily Wang</h4>
+                              <p class="send-time mb-3">10:38 AM (4 hours ago)</p>
+                            </div>
+                          </div>
+                          <div class="content-description flex-grow-1">
+                            <p class="question mb-3">Hi Teacher, the attached file is my homework of chapter 2. And here
+                              comes a question: Why in the following code the height of the <code
+                                class="text-success bg-light">div</code> is bigger than the height of the <code
+                                class="text-success bg-light">img</code> ? There is a gap below the image, but it doesn’t
+                              seems to be a padding/margin. What is the gap or extra space below image?</p>
+                            <div class="file">
+                              <a href="#" class="package text-decoration-none d-flex align-items-center">
+                                <span class="material-icons me-2 d-block">attach_file</span>
+                                <span class="fw-bold">HW-2-David.zip</span>
+                              </a>
+                            </div>
+                          </div>
+                        </li>
+                      </ul>
+                      <!-- <div class="content-info">
+                        <div class="d-flex">
+                          <img class="rounded-circle me-2" src="../assets/images/andychen.jpeg" alt="teacher-photo">
+                          <div>
+                            <h4 class="student-name fw-bold mb-1">Emily Wang</h4>
+                            <p class="send-time mb-3">13:24 AM (1 hours ago)</p>
+                          </div>
+                          <div class="fun ms-auto">
+                            <a href="#">
+                              <span class="material-symbols-outlined me-4">
+                                star
+                                </span>
+                            </a>
+                            <a href="#">
+                              <span class="material-icons">edit</span>
+                            </a>
+                          </div>
+                        </div>
+                        <div class="content-description answer">
+                          <p class="question mb-3">Hi David, by default, an image is rendered inline, like a letter so it sits on the same line that a, b, c and d sit on. There is space below that line for the descenders you find on letters like g, j, p and q.<br><br> You can: <br><br>　• adjust the <code class="text-success">vertical-align</code> of the image to position it elsewhere (e.g. the <code class="text-success">middle</code> ) or <br>　• change the <code class="text-success">display</code> so it isn’t inline.</p>
+                        </div>
+                      </div> -->
+                    </div>
+                  </div>
+                  <div id="editor" class="editor">This is some sample content.</div>
+                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+                </div>
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...
+                </div>
+                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...
+                </div>
+              </div>
+              <div class="footer">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="switch d-flex">
+                    <a href="#">
+                      <span class="material-symbols-outlined">
+                        navigate_before
+                      </span>
+                    </a>
+                    <a href="#">
+                      <span class="material-symbols-outlined">
+                        navigate_next
+                      </span>
+                    </a>
+                  </div>
+                  <div class="action">
+                    <a href="#" class="btn btn-outline-success me-3 mark">Mark as read</a>
+                    <a href="#" class="btn btn-success reply">Reply</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+  </div>
+  <!-- <%- include('./layout/footer'); -%> -->
+  <script src="https://cdn.ckeditor.com/ckeditor5/29.0.0/classic/ckeditor.js"></script>
+  <script>
+    ClassicEditor
+      .create(document.querySelector('#editor'), {
+        removePlugins: ['Heading'],
+        toolbar: ['bold', 'italic', 'bulletedList', 'numberedList', 'blockQuote', 'link']
+      })
+      .then(editor => {
+        console.log(editor);
+      })
+      .catch(error => {
+        console.error(error);
+      });
+  </script>
+  <script type="module" src="../main.js"></script>
+</body>
 
-    <%- include('./layout/footer'); -%>
-
-    <script type="module" src="../main.js"></script>
-  </body>
 </html>
