--- a/pages/admin.html
+++ b/pages/admin.html
@@ -309,16 +309,55 @@
       <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+            <div class="modal-body manger-info">
+              <div class="d-flex">
+                <div>
+                  <img class="manger-photo me-4" src="../assets/images/emir.jpeg" alt="manger-photo">
+                </div>
+                <div class="w-100">
+                  <div class="d-flex justify-content-between mb-2">
+                    <span class="hash d-inline-block">#1</span>
+                    <button type="button" class="btn-close p-0" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <h3 class="level mb-0">Admin</h3>
+                  <h2 class="manger-name fw-bold">Emir Wicks</h2>
+                  <p class="manger-mail">emir.wicks@mail.com</p>
+                  <div class="accordion-item d-flex justify-content-between align-items-center mb-4">
+                    <span class="status d-block py-1 px-2 bg-light">Verified</span>
+                    <button class="btn link-success d-flex p-0 border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                      <span class="material-icons expand_less">
+                        expand_less
+                      </span>
+                      <span class="material-icons expand_more">
+                        expand_more
+                      </span>
+                    </button>
+                  </div>
+                  <div class="collapse" id="collapseExample">
+                    <div class="d-flex justify-content-between">
+                      <button type="button" class="btn btn-outline-danger me-3">deactivate</button>
+                      <button type="button" class="btn btn-success">Edit</button>
+                    </div>
+                  </div>
+                  <!-- <div class="accordion" id="accordionExample">
+                    <div class="accordion-item d-flex justify-content-between align-items-center mb-4">
+                      <span class="status d-block">Verified</span>
+                      <h2 class="accordion-header bg-white" id="headingOne">
+                        <button class="btn link-success p-0 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                          <span class="material-icons expand_less">expand_less</span>
+                          <span class="material-icons expand_more">expand_more</span>
+                        </button>
+                      </h2>
+                    </div>
+                    <div class="collapse" id="collapseExample">
+                      <div class="btn-action d-flex justify-content-between">
+                        <button type="button" class="cancel btn btn-outline-danger me-3">Deactivate</button>
+                        <button type="button" class="action btn btn-success" data-bs-target="#exampleModa2" data-bs-toggle="modal">Edit</button>
+                      </div>
+                    </div>
+                  </div> -->
+                </div>
+              </div>
             </div>
           </div>
         </div>
