依據建議事項修正

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -33,14 +33,14 @@
                   search
                 </span>
               </a>
-              <a class="fun2" href="#">
+              <a class="fun2 text-decoration-none" href="#">
                 <span class="material-icons">
                   notifications
                 </span>
               </a>
             </div>
           </div>
-          <table class="table align-middle mb-0">
+          <table class="table table-hover align-middle mb-0">
             <thead class="border-dark">
               <tr class="text-dark pb-1">
                 <th scope="col">
@@ -57,7 +57,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-bs-toggle="modal" data-bs-target="#exampleModal2">
                 <td scope="row"><div class="td-content mb-0">#1</div></td>
                 <td><div class="td-content mb-0">Emir Wicks</div></td>
                 <td><div class="td-content mb-0">emir.wicks@mail.com</div></td>
@@ -65,12 +65,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -87,12 +87,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -109,12 +109,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -131,12 +131,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -153,12 +153,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -175,12 +175,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -197,12 +197,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -219,12 +219,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -241,12 +241,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -263,12 +263,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -500,7 +500,7 @@
                   </div>
                   <div class="collapse" id="collapseExample">
                     <div class="d-flex justify-content-between">
-                      <button type="button" class="btn btn-outline-danger me-3">Deactivate</button>
+                      <button type="button" class="btn btn-outline-danger me-3" data-bs-dismiss="modal">Deactivate</button>
                       <a class="btn btn-success" href="#" data-bs-toggle="modal"
                       data-bs-target="#exampleModal3">Edit</a>
                     </div>
