--- a/admin.html
+++ b/admin.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <script type="module" crossorigin src="/2023-web-layoot-week5/assets/main-b32b971d.js"></script>
-  <link rel="stylesheet" href="/2023-web-layoot-week5/assets/main-303f8dfe.css">
+  <script type="module" crossorigin src="/2023-web-layoot-week5/assets/main-b318d564.js"></script>
+  <link rel="stylesheet" href="/2023-web-layoot-week5/assets/main-ce919cf8.css">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
           </a>
       </li>
         <li>
-          <a href="#" class="d-flex align-items-center text-decoration-none">
+          <a href="./index.html" class="d-flex align-items-center text-decoration-none active">
             <span class="material-icons me-3">assignment</span>
             <span>Assignment</span>
           </a>
@@ -88,14 +88,14 @@
                   search
                 </span>
               </a>
-              <a class="fun2" href="#">
+              <a class="fun2 text-decoration-none" href="#">
                 <span class="material-icons">
                   notifications
                 </span>
               </a>
             </div>
           </div>
-          <table class="table align-middle mb-0">
+          <table class="table table-hover align-middle mb-0">
             <thead class="border-dark">
               <tr class="text-dark pb-1">
                 <th scope="col">
@@ -112,7 +112,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-bs-toggle="modal" data-bs-target="#exampleModal2">
                 <td scope="row"><div class="td-content mb-0">#1</div></td>
                 <td><div class="td-content mb-0">Emir Wicks</div></td>
                 <td><div class="td-content mb-0">emir.wicks@mail.com</div></td>
@@ -120,12 +120,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -142,12 +142,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -164,12 +164,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -186,12 +186,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -208,12 +208,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -230,12 +230,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -252,12 +252,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -274,12 +274,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -296,12 +296,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -318,12 +318,12 @@
                   <div class="align-items-center d-flex justify-content-between">
                     <span>Yes</span>
                     <div>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal2">
                         <span class="material-icons visibility">
                           visibility
                         </span>
                       </a>
-                      <a class="fun2" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                      <a class="fun2 text-decoration-none" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal3">
                         <span class="material-icons">
                           edit
                         </span>
@@ -555,7 +555,7 @@
                   </div>
                   <div class="collapse" id="collapseExample">
                     <div class="d-flex justify-content-between">
-                      <button type="button" class="btn btn-outline-danger me-3">Deactivate</button>
+                      <button type="button" class="btn btn-outline-danger me-3" data-bs-dismiss="modal">Deactivate</button>
                       <a class="btn btn-success" href="#" data-bs-toggle="modal"
                       data-bs-target="#exampleModal3">Edit</a>
                     </div>
